Add Styling to Welcome page

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,1 +1,20 @@
-%h1 Viola! This is the Placeholder!
+#banner
+  .banner_content
+    %h1 DocuFile
+    %p Your Document Management System
+    %button= link_to 'Enter', new_user_registration_path
+
+#callouts
+  .callout_inner
+    .wrapper
+      .callout_inner
+        %h2 Organize
+        %p Pork loin brisket chicken, pork biltong sausage turkey ham hock
+        chuck burgdoggen shoulder. Pork cupim doner rump ground round
+        turducken boudin ribeye flank pig biltong shoulder.
+
+#bottom_cta
+  .wrapper
+    %h2 Go Ahead!
+    %br
+    %button= link_to 'Join Now', new_user_registration_path
