--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,7 +2,7 @@
  *= require_self
  */
 
-@import 'normalize';
+@import 'normalize.css.scss';
 @import 'global.css.scss';
 @import 'docs.css.scss';
 @import 'welcome.css.scss';
