Add Wrappers to Edit, New, Sign Up and Log in Pages

--- a/app/views/docs/edit.html.haml
+++ b/app/views/docs/edit.html.haml
@@ -1,3 +1,5 @@
-%h1 Fix Doc !
-= render 'form'
-= link_to "Cancel", docs_path
+.wrapper_with_padding
+  %h1 Fix Doc !
+
+  = render 'form'
+  = link_to "Cancel", docs_path
