docs/index clean up.

--- a/app/views/docs/index.html.haml
+++ b/app/views/docs/index.html.haml
@@ -9,5 +9,5 @@
             %p.content= truncate(doc.content, length:50)
     - else
       %h2 Create Doc!
-      %p Start Creating and Organizing your Documents !
+      %p Begin Creating and Organizing your Documents !
       %button= link_to 'Create Doc', new_doc_path
